# rgit

./: .gitignore  .pylintrc  LICENSE  README.md  master.tasks  pyproject.toml  setup.py
docs/: publishing.md
repos/: __init__.py  __main__.py  configuration.py  constants.py  git.py  settings.py  tools.py
repos/cli/: __init__.py  ignored.py  registry.py  scan.py  status.py
rgit/: __init__.py  __main__.py  _gitcli.py  configuration.py  constants.py  git.py  tools.py
rgit/cli/: __init__.py  ignored.py  registry.py  scan.py  status.py  version.py
tests/: __init__.py  test_configuration.py  test_gitcli.py  test_tools.py
tools/: hatch_build.py
