[project]
name = "rgit"
version = "0.0.0"
description = ""
requires-python = ">=3.14"
license = {text = "UNLICENSED"}
dependencies = [
	"PyYAML>=6.0.1,<7.0.0",
	"pygit2>=1.19.2,<2.0.0",
]

[project.scripts]
rgit = "rgit.__main__:_ssmain"

[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"
