[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rgit"
dynamic = ["version"]
description = "A tool to discover and monitor statuses of local git repositories."
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "Vruyr Gyolchanyan"}]
dependencies = [
	"PyYAML>=6.0.1,<7.0.0",
	"pygit2>=1.19.2,<2.0.0",
]

[project.urls]
Repository = "https://github.com/vruyr/rgit"

[tool.hatch.version]
source = "code"
path = "tools/hatch_build.py"
expression = "get_version()"

[project.scripts]
rgit = "rgit.__main__:_ssmain"
